# HFTrading

./: .gitignore  AeronMedia.Dockerfile  CMakeLists.txt  README.md  Streams.Dockerfile  docker-compose.yml  requirements.txt  vcpkg.json
.github/workflows/: build.yml  python-tests.yml
algos/: CMakeLists.txt  main.cpp  regression.cpp  regression.h
backtest/: backtest.md  main.py  run_tests.py
backtest/core/: engine.py
backtest/data/: data_source.py  feed.py
backtest/exchange/: exchange.py  orderbook.py
backtest/reporters/: performance.py  risk.py
backtest/strategies/: market_making_strategy.py  static_arbitrage.py  strategy.py
backtest/templates/: index.html
backtest/tests/: test_orderbook.py
communication/: CMakeLists.txt  README.md  aeron_publisher.cpp  aeron_publisher.h
communication/aeron/: aeron.h  publisher.h  subscriber.h
communication/nats/: nats_client.cpp  nats_client.h
communication/tests/: EmbeddedAeronMediaDriver.h  aeron_e2e_test.cpp  main_test.cpp
exporter/: exporter.py  nats_py.py
metrics/: CMakeLists.txt  metrics.h  metrics_exporter.h  registry.h  rolling_histogram.h
streams/: CMakeLists.txt  binance_websocket_client.cpp  binance_websocket_client.h  config.cpp  config.h  config.yaml  main.cpp  metrics.cpp  metrics.h  nats_client.cpp  nats_client.h  stream_metrics.h  websocket_client.h
streams/tests/: config_test.cpp  metrics_test.cpp  nats_client_test.cpp
